Fixed bug #50073 (parse_url() incorrect when ? in fragment).